fixed header alignment

--- a/styles/main.css
+++ b/styles/main.css
@@ -57,7 +57,7 @@ header {
     width: 100%;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: start;
     background-color: var(--color3);
     height: var(--header-height);
     box-shadow: var(--shadow);
